# tootle

./: *unsaved file 1  .gitignore  README.md  com.github.bleakgrey.tootle.json  install.sh  meson.build  unsaved file 1
data/: app.css  com.github.bleakgrey.tootle.appdata.xml.in  com.github.bleakgrey.tootle.gresource.xml  com.github.bleakgrey.tootle.metainfo.xml.in  dark.css  gresource.xml  light.css  meson.build
data/ui/: menus.ui  new_account_dialog.ui
data/ui/dialogs/: compose.ui  list_editor.ui  main.ui  new_account.ui  preferences.ui
data/ui/views/: base.ui  new_account.ui  profile.ui  profile_header.ui  sidebar.ui
data/ui/views/sidebar/: account.ui  action.ui  item.ui  view.ui
data/ui/widgets/: #status.ui#  .status (copy).ui  accounts_button.ui  accounts_button_item.ui  adaptive_button.ui  attachment_slot.ui  compose_attachment.ui  list_editor_item.ui  list_item.ui  lists.ui  profile_field_row.ui  status (copy).ui  status.ui  timeline_filter.ui  votebox.ui
debian/: control
po/: LINGUAS  POTFILES  ca.po  com.github.bleakgrey.tootle.pot  de_DE.po  es_ES.po  es_MX.po  fr_FR.po  hr.po  it.po  nb-NO.po  nb.po  nl.po  pt_BR.po  ru_RU.po  sv.po  zh_CN.po
src/: Application.vala  Build.vala  Build.vala.in  Desktop.vala  Drawing.vala  Html.vala  InstanceAccount.vala  Network.vala  Notificator.vala  Request.vala  Time.vala  Watchlist.vala
src/API/: Account.vala  Attachment.vala  Conversation.vala  Entity.vala  List.vala  Mention.vala  Notification.vala  NotificationType.vala  Poll.vala  PollOption.vala  Relationship.vala  Status.vala  Tag.vala  Visibility.vala
src/Dialogs/: About.vala  Compose.vala  ISavedWindow.vala  ListEditor.vala  MainWindow.vala  NewAccount.vala  NewAccountDialog.vala  PostDialog.vala  Preferences.vala
src/Dialogs/Composer/: Dialog.vala  EditorPage.vala  Page.vala
src/Services/: Accounts.vala  Cache.vala  IAccountListener.vala  IStreamListener.vala  ImageCache.vala  Network.vala  Notificator.vala  Request.vala  Settings.vala  Streams.vala  Watchlist.vala
src/Services/Accounts/: AccountHolder.vala  AccountStore.vala  FileAccountStore.vala  IAccountListener.vala  InstanceAccount.vala  SecretAccountStore.vala
src/Services/Accounts/Mastodon/: Account.vala  MastodonAccount.vala
src/Services/Cache/: AbstractCache.vala  EntityCache.vala  ImageCache.vala
src/Services/Network/: Network.vala  Streamable.vala
src/Services/Streams/: Streamable.vala  Streams.vala
src/Utils/: Desktop.vala
src/Views/: Abstract.vala  AccountView.vala  Base.vala  ContentBase.vala  Conversations.vala  Direct.vala  ExpandedStatus.vala  Favorites.vala  Federated.vala  Followers.vala  Following.vala  Hashtag.vala  Home.vala  Lists.vala  Local.vala  Main.vala  NewAccount.vala  Notifications.vala  Profile.vala  Search.vala  Sidebar.vala  TabbedBase.vala  Thread.vala  Timeline.vala
src/Widgets/: Account.vala  AccountsButton.vala  AdaptiveButton.vala  AttachmentBox.vala  AttachmentGrid.vala  Avatar.vala  Conversation.vala  Disposable.vala  ImageAttachment.vala  MarkupView.vala  Notification.vala  RichLabel.vala  Status.vala  StatusWidget.vala  TimelineFilter.vala  TimelineMenu.vala  VisibilityPopover.vala  VoteBox.vala
src/Widgets/Attachment/: Box.vala  Image.vala  Item.vala  Picture.vala  Slot.vala
subprojects/: libhandy.wrap
